# pcb-reflow-stm32-rust-rtic

./: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
.github/workflows/: rust.yml
docs/hardware/: mainboard_v3.brd  mainboard_v3.sch
src/: display.rs  display_old.rs  main.rs
